--- a/src/DateScanner.csproj
+++ b/src/DateScanner.csproj
@@ -1,9 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Build>$([System.DateTime]::op_Subtraction($([System.DateTime]::get_Now().get_Date()),$([System.DateTime]::new(2000,1,1))).get_TotalDays())</Build>
+    <Revision>$([MSBuild]::Divide($([System.DateTime]::get_Now().get_TimeOfDay().get_TotalSeconds()), 2).ToString('F0'))</Revision>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
+    <PackageId>DateScanner</PackageId>
+    <VersionPrefix>0.1.$(Build).$(Revision)</VersionPrefix>
+    <VersionSuffix>alpha</VersionSuffix>
+    <Authors>rudimenter</Authors>
   </PropertyGroup>
 
 </Project>
