--- a/src/DateScanner.csproj
+++ b/src/DateScanner.csproj
@@ -7,8 +7,7 @@
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <PackageId>DateScanner</PackageId>
-    <VersionPrefix>0.1.$(Build).$(Revision)</VersionPrefix>
-    <VersionSuffix>alpha</VersionSuffix>
+    <Version>0.1.$(Build).$(Revision)-alpha</Version>
     <Authors>rudimenter</Authors>
   </PropertyGroup>
 
