--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,29 +1,54 @@
-name: publish to nuget
+
+name: CI On nuget
 on:
   push:
     branches:
-      - master # Your default release branch
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   publish:
-    name: list on nuget
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+    runs-on: windows-latest
+    env:
+    #   SigningCertificate: GitHubActionsDemo.pfx
+    #   Solution_Path: MyWpfApp.sln
+       Project_Path: src/DateScanner.csproj
+       Test_Project_Path: test/DateScanner.Tests.csproj
+    #   Wpf_Project_Path: MyWpfApp\MyWpfApp.csproj
+    #   Wap_Project_Directory: MyWpfAsrpp.Package
+    #   Wap_Project_Name: MyWpfApp.Package.wapproj
 
-      # Required for a specific dotnet version that doesn't come with ubuntu-latest / windows-latest
-      # Visit bit.ly/2synnZl to see the list of SDKs that are pre-installed with ubuntu-latest / windows-latest
-      # - name: Setup dotnet
-      #   uses: actions/setup-dotnet@v1
-      #   with:
-      #     dotnet-version: 3.1.100
-      
-      # Publish
-      - name: publish on version change
-        uses: rohith/publish-nuget@v2
-        with:
-          PROJECT_FILE_PATH: src/DateScanner.csproj # Relative to repository root
-          # VERSION_FILE_PATH: Directory.Build.props # Filepath with version info, relative to repository root. Defaults to project file
-          VERSION_REGEX: <Version>(.*)<\/Version> # Regex pattern to extract version info in a capturing group
-          TAG_COMMIT: false # Flag to enable / disalge git tagging
-          TAG_FORMAT: v* # Format of the git tag, [*] gets replaced with version
-          NUGET_KEY: ${{secrets.NUGET_API_KEY}} # nuget.org API key
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+
+    # Use Nerdbank.GitVersioning to set version variables: https://github.com/AArnott/nbgv
+    - name: Use Nerdbank.GitVersioning to set version variables
+      uses: aarnott/nbgv@v0.3
+      with:
+        setAllVars: true
+
+    # Install the .NET Core workload
+    - name: Install .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.100
+        source-url: https://api.nuget.org/v3/index.json
+      env:
+        NUGET_AUTH_Token: ${{secrets.NUGET_API_KEY}}
+
+    # Test
+    - name: Test
+      run: dotnet test $env:Test_Project_Path
+
+    #Pack  
+    - name: Pack
+      run: dotnet pack $env:Project_Path -c Release --output nupkgs -p:Version=$env:NBGV_NuGetPackageVersion --include-symbols --include-source
+
+    #Deploy
+    - name: Publish
+      run: dotnet nuget push nupkgs/*.nupkg 
+    
