--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,14 +11,9 @@ jobs:
   publish:
     runs-on: windows-latest
     env:
-    #   SigningCertificate: GitHubActionsDemo.pfx
-    #   Solution_Path: MyWpfApp.sln
        Project_Path: src/DateScanner.csproj
-       Test_Project_Path: test/DateScanner.Tests.csproj
-    #   Wpf_Project_Path: MyWpfApp\MyWpfApp.csproj
-    #   Wap_Project_Directory: MyWpfAsrpp.Package
-    #   Wap_Project_Name: MyWpfApp.Package.wapproj
-
+       Test_Project_Path: test/DateScanner.Test.csproj
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v2
