--- a/src/DateScanner.csproj
+++ b/src/DateScanner.csproj
@@ -8,6 +8,10 @@
     <PackageId>DateScanner</PackageId>
     <Description>DateScanner is a regex based library to extact dates and times from short strings and multiline texts</Description>
     <Authors>Mike Podonyi</Authors>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/mpodonyi/DateScanner</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Copyright>Copyright 2020 © Mike Podonyi. All rights reserved.</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
